# krypton

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.svelte  state.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
