[package]
name = "krypton"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
ron = "0.8.0"
serde_json = "1.0.91"
serde_yaml = "0.9.17"
toml = "0.7.0"
serde-xml-rs = "0.6.0"
anyhow = "1.0.68"
serde_urlencoded = "0.7.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
